[metadata]
name = parsemon2
version = 3.0.1
author = Sebastian Jordan
author_email = sebastian.jordan.mail@googlemail.com
description = A monadic parser combinator written purely in python
long_description = file: README.rst
license = GPLv3

[options]
package_dir =
    parsemon = src/parsemon
    parsemon.deque = src/parsemon/deque
packages = parsemon, parsemon.deque
install_requires = attrs
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
