[metadata]
name = parsemon2
version = 3.0.1
author = Sebastian Jordan
author_email = sebastian.jordan.mail@googlemail.com
description = A monadic parser combinator written purely in python
long_description = file: README.rst
license = GPLv3

[options]
package_dir =
    parsemon = parsemon
    parsemon.deque = parsemon/deque
packages = parsemon, parsemon.deque
install_requires = attrs
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[tool:isort]
profile = black
known_first_party=parsemon
known_third_party=pytest,attr,hypothesis
skip_glob =
    result/**

[flake8]
per-file-ignores =
    **/__init__.py:F401
ignore = E501,W503,E203
exclude =
    .mypy_cache
    site-packages

